BUG1268 Fix wishlist layout issues

--- a/src/client/src/Feature/Account/Wishlist/components/WishListItem/styles.scss
+++ b/src/client/src/Feature/Account/Wishlist/components/WishListItem/styles.scss
@@ -49,6 +49,7 @@
 }
 .wishlist_item_name{
   color: $table-font-color;
+  text-transform: uppercase;
 }
 .wishlist_item_name:hover{
   color: $theme-color;
